Fixed auth and project basic structure

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -14,3 +14,11 @@ PUBLIC_BASE_URL=http://localhost:8000
 APP_NAME=course-shera-api
 ENV=dev
 
+# Clerk (JWT verification)
+# Get JWT PEM public key: Clerk Dashboard → API Keys → JWT public key → PEM
+CLERK_JWT_KEY=sk_test_WAulRM1JmmpjrY3MVjvpgT299oDXzwbTCZrEAweoE1
+# Allowed origins for azp check (comma-separated), e.g. http://localhost:3000
+CLERK_AUTHORIZED_PARTIES=http://localhost:3000
+# Clerk user IDs that are always admin (comma-separated, optional)
+CLERK_ADMIN_IDS=
+
