--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -12,6 +12,10 @@ pymupdf>=1.24.0
 python-docx>=0.8.11
 python-pptx>=0.6.23
 
+# Auth (JWT + password hashing with argon2)
+PyJWT>=2.8.0
+pwdlib[argon2]>=0.2.0
+
 # dev/test
 pytest>=8.0.0
 httpx>=0.27.0
