--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,13 +9,14 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "axios": "^1.7.0",
+    "jspdf": "^4.0.0",
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "axios": "^1.7.0",
-    "zustand": "^4.5.0",
     "react-markdown": "^9.0.0",
-    "react-syntax-highlighter": "^15.5.0"
+    "react-syntax-highlighter": "^15.5.0",
+    "zustand": "^4.5.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
