--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@google/genai": "^1.38.0",
     "axios": "^1.7.0",
     "jspdf": "^4.0.0",
     "next": "16.1.6",
